tests/extensions/ternary_ops/syntaxErr/wrongOrder.wacc
# '?' comes first, not '!'

# Output:
# 

# Exit:
# 100

begin
    int i = 4;
    println i % 2 == 0 : "even" ? "odd"
end